# riscv32-perf-model

./: .gitmodules  CMakeLists.txt  README.md  compile.sh
lib/: CMakeLists.txt
perf_model/: CMakeLists.txt
perf_model/include/model/: AtomicClock.h  Core.h  IClock.h  ICore.h  IPerfStats.h  PerfStats.h
perf_model/lib/: CMakeLists.txt
perf_model/lib/decoder/: CMakeLists.txt
perf_model/lib/decoder/include/common/: common.hpp
perf_model/lib/decoder/include/decoder/: decoder.hpp
perf_model/lib/decoder/src/: decoder.cpp  decoder16.cpp
perf_model/lib/model/: BasicClock.h  BasicClockSubscriber.h  CMakeLists.txt  Core.h  FetchUnit.h  MemoryRequest.h  Model.cpp  Model.h  PerfStats.h
perf_model/lib/visible/: CMakeLists.txt  visible.h  visible_extract.cpp  visible_extract.h  visible_ostream.cpp
perf_model/lib/visible_test/: CMakeLists.txt  visible_test.cpp
perf_model/src/: CMakeLists.txt  main.cpp  perf_model.cpp
perf_model/src/model/: BasicClock.h  BasicClockSubscriber.h  Core.cpp  Core.h  FetchUnit.cpp  IClock.h  IClockSubscriber.h  ICore.h  IPerfStats.h  Model.cpp  Model.h  PerfStats.h
src/: CMakeLists.txt  main.cpp
